--- a/campizza-backend/frontend/package.json
+++ b/campizza-backend/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/reactstrap": "^8.7.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^9.6.3",
     "http-proxy-middleware": "^1.0.6",
     "jquery": "^3.5.1",
     "linkstate": "^2.0.1",
@@ -31,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "reactstrap": "^8.9.0",
+    "reload": "^3.2.0",
     "rsuite": "^4.8.9",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
